them-columns: prevent overflow of pre code

--- a/resources/plugins/theme-columns/src/css/columns.css
+++ b/resources/plugins/theme-columns/src/css/columns.css
@@ -41,8 +41,9 @@
     --nav-not-selected-border: 5px solid transparent;
 }
 
-body, div, nav, main {
+body, div, nav, main, pre {
     min-height: 0;
+    min-width: 0;
     margin: 0;
     padding: 0;
     color: var(--text);
@@ -453,6 +454,7 @@ pre {
 	border: solid 1px var(--code-bg);
 	font-weight: normal;
 	padding: 6px 0 4px 6px;
+    overflow-x: auto;
 }
 code {
     padding: 2px 5px;
@@ -469,7 +471,6 @@ pre code {
     border: none;
     white-space: pre;
     word-wrap: normal;
-    overflow-x: auto;
 }
 
 main a {
